// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test addUi5YamlServeStaticMiddleware ui5.yaml - add fiori-tools-servestatic 1`] = `
"specVersion: '2.4'
metadata:
  name: 'fe_lrop_v4_odata_none'
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - path: /sap
            url: https://abc.example
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com.example
          version: 1.91.0 # The UI5 version, for instance, 1.78.1. Empty means latest version
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
    - name: fiori-tools-servestatic
      beforeMiddleware: fiori-tools-proxy
      configuration:
        paths:
          - path: /appconfig
            src: appconfig
            fallthrough: false
"
`;

exports[`Test addUi5YamlServeStaticMiddleware ui5.yaml - existing fiori-tools-servestatic 1`] = `
"specVersion: '2.4'
metadata:
    name: 'ui5-smartlinks-config'
type: application
server:
    customMiddleware:
        - name: fiori-tools-proxy
          afterMiddleware: compression
          configuration:
              ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
              backend:
                  - path: /sap
                    url: https://abc.ondemand.example
              ui5:
                  path:
                      - /resources
                      - /test-resources
                  url: https://ui5.sap.com.example
                  version: 1.91.0 # The UI5 version, for instance, 1.78.1. Empty means latest version
        - name: fiori-tools-servestatic
          beforeMiddleware: fiori-tools-proxy
          configuration:
              paths:
                  - path: /appconfig
                    src: appconfig
                    fallthrough: false
"
`;

exports[`Test addUi5YamlServeStaticMiddleware ui5-local.yaml - add fiori-tools-proxy 1`] = `
"specVersion: '2.4'
metadata:
  name: 'ui5-smartlinks-config'
type: application
server:
  customMiddleware:
    - name: fiori-tools-servestatic
      afterMiddleware: compression
      configuration:
        paths:
          - path: /appconfig
            src: appconfig
            fallthrough: false
"
`;
